Closed Bug 108585 Opened 24 years ago Closed 24 years ago

mach-o optimized build crashes when using menus

Categories

(Core :: XUL, defect, P2)

Other
Other
defect

Tracking

()

RESOLVED FIXED
mozilla0.9.6

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

My mach-o optimized build (-O2) crashes whenever I touch a menu. Simple fix to be attached. I'm kinda surprised the old code is even legal, since with some pointer types that would have to be a temporary (although in this case it isn't -- it's probably just tickling some bug in the optimizer). Reviews?
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla0.9.6
Comment on attachment 56603 [details] [diff] [review] patch Whoa, that patch has some weird binary crap in it. sr=sfraser
Attachment #56603 - Flags: superreview+
Fix checked in 2001-11-05 22:15:40 PDT. The "binary crap" was because I attached it using MacIE since today's build was deemed unsuitable for bugzilla.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
See bug 154815 comment 12 for an explanation of why this code shouldn't even have compiled. There's a mostly-but-not-quite-related gcc bug report: http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&pr=1920&database=gcc
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: jrgmorrison → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: