Take address before casting to avoid confusing the gcc optimizer with what perhaps shouldn't compile anyway.  r=pinkerton  sr=sfraser  b=108585